# MLEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: compile.yml
Assets/shaders/: lighting.frag.glsl  lighting.vert.glsl  simple_triangle.frag.glsl  simple_triangle.vert.glsl
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/Core/: Console.h  CreateCube.h  Engine.h  EntryPoint.h  ImGUIIntegration.h  ImGuiIntegration.h  InputManager.h  Logger.h  ResourceManager.h  Time.h  Window.h
Engine/Core/src/Core/: Console.cpp  Engine.cpp  EntryPoint.cpp  ImGuiIntegration.cpp  Logger.cpp  ResourceManager.cpp  Time.cpp  Window.cpp
Engine/CoreInterfaces/: CMakeLists.txt
Engine/CoreInterfaces/include/CoreInterfaces/: ApplicationInterface.h  ModuleInterface.h  ModuleLocator.h  Types.h
Engine/CoreInterfaces/src/CoreInterfaces/: Interfaces.cpp
Engine/Debug/: CMakeLists.txt
Engine/Debug/include/Debug/: Assert.h  Debugger.h  Logger.h  Preprocessor.h
Engine/Debug/include/Debug/LogHandlers/: CallbackLogHandler.h  ConsoleLogHandler.h  FileLogHandler.h  LogHandlerInterface.h
Engine/Debug/src/Debug/: Debugger.cpp  Logger.cpp
Engine/Debug/src/Debug/LogHandlers/: CallbackLogHandler.cpp  ConsoleLogHandler.cpp  FileLogHandler.cpp
Engine/Inputs/: CMakeLists.txt
Engine/Inputs/include/Inputs/: InputModule.h  Module.h
Engine/Inputs/src/Inputs/: InputModule.cpp  Module.cpp
Engine/Logger/: CMakeLists.txt
Engine/Logger/include/Logger/: Logger.h  Module.h  Preprocessor.h
Engine/Logger/src/Logger/: Logger.cpp  Module.cpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/include/Platform/: EntryPoint.h  Module.h  PlatformEvent.h  Window.h  WindowHandle.h
Engine/Platform/src/Platform/: EntryPoint.cpp  Module.cpp  Window.cpp
Engine/Platform/src/Platform/Private/: WindowImpl.cpp  WindowImpl.h
Engine/Rendering/: CMakeLists.txt
Engine/Rendering/include/Rendering/: Camera.h  Context.h  Framebuffer.h  Mesh.h  Module.h  Renderer.h  Shader.h  Texture.h
Engine/Rendering/src/Rendering/: Camera.cpp  Context.cpp  Framebuffer.cpp  Mesh.cpp  Module.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Engine/Resource/: CMakeLists.txt
Engine/Resource/include/Resource/: ResourceManager.h
Engine/Resource/src/Resource/: ResourceManager.cpp
Engine/include/: Console.h  ImGUIIntegration.h  Window.h
Engine/include/Core/: CreateCube.h  Engine.h  InputManager.h  Logger.h  Time.h
Engine/include/Rendering/: Camera.h  Context.h  Framebuffer.h  Mesh.h  Renderer.h  Shader.h  Texture.h
Engine/src/: Console.cpp  Window.cpp
Engine/src/Core/: Engine.cpp  Logger.cpp  Time.cpp
Engine/src/Rendering/: Camera.cpp  Context.cpp  Framebuffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Launcher/: CMakeLists.txt
Launcher/include/: DefaultApp.h
Launcher/src/: DefaultApp.cpp  main.cpp
Libs/: CMakeLists.txt
Libs/glad/: CMakeLists.txt
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
cmake/: MLEngineDeps.cmake  MLEngineGlobals.cmake  MLEngineUtils.cmake
cmake/Libs/: SDL3.cmake  flecs.cmake  fmt.cmake  glm.cmake  imgui.cmake
